--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "glob": "^11.0.0",
     "less": "^4.2.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-purgecss": "^0.2.12"
   }
 }
