Using Actions to deploy to Github Pages fix spelling

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   build:
-    enviroment:
+    environment:
       name: github-pages
       url: ${{ steps.github_pages.outputs.url }}
     runs-on: ubuntu-latest
