--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "glob": "^11.0.0",
     "less": "^4.2.0",
     "vite": "^5.4.8",
+    "vite-plugin-handlebars": "^2.0.0",
     "vite-plugin-purgecss": "^0.2.12"
   }
 }
